@@ -973,3 +973,4 @@ load "nullspacetest.gel"					true
 load "longtest.gel"						true
 load "testprec.gel"						true
 load "testscope.gel"						true
+load "testfourier.gel"						true
