@@ -1,3 +1,15 @@
+Fri Jul 24 17:23:04 2009  Jiri (George) Lebl <jirka@5z.com>
+
+	* lib/calculus/fourier.gel: fix cosine series and fix argument
+	  checking on the fourier function creation
+
+	* src/geniustests.txt, src/testfourier.gel: add tests for the
+	  fourier functions
+
+	* src/graphing.c: the create plot and plot dialogs are stupid as
+	  dialogs because of the way metacity handles dialogs (annoyingly
+	  as "keep above parent") so set the hint to normal.
+
 Fri Jul 24 16:32:32 2009  Jiri (George) Lebl <jirka@5z.com>
 
 	* lib/calculus/fourier.gel: add NumericalFourierCosineSeriesFunction
